--- a/shopping_services/appsettings.json
+++ b/shopping_services/appsettings.json
@@ -1,9 +1,13 @@
-{
+  {
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "MyDB": "Server=localhost;Database=shopping_db;Port=5432;User Id=postgres;Password=1;"
+    }
+
+  }
