--- a/shopping_services/appsettings.json
+++ b/shopping_services/appsettings.json
@@ -1,13 +1,17 @@
-  {
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "MyDB": "Server=localhost;Database=shopping_db;Port=5432;User Id=postgres;Password=1;"
-    }
-
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyDB": "Server=localhost;Database=shopping_db;Port=5432;User Id=postgres;Password=1;"
+  },
+  "JWT": {
+    "Key": "This is my supper secret key for jwt",
+    "Issuer": "https://codepedia.info",
+    "Audience": "codepedia.info"
   }
+}
